ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    # kubernetes.io/ingress.class: "nginx"
spec:
  # ingressClassName: nginx # Nếu bạn không muốn dùng annotations
  ingressClassName: nginx
  tls:
  - hosts:
    - 641ed4.learnk8s.jamesisme.com
    secretName: todo-tls
  rules:
  - host: 641ed4.learnk8s.jamesisme.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: svc-http
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              name: svc-http
